feat: add sameAddressAs field in child model
closes #48
